@@ -1,3 +1,6 @@
+2023. 5.21. Modified _zOpticalInfoESRFromZTK, _zOpticalInfoSnsFromZTK, and _zOpticalInfoAlphaFromZTK to use zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha, respectively. [zeo_render_optic]
+2023. 5.21. Renamed _zOpticalInfoEsrFromZTK and _zOpticalInfoEsrFPrintZTK to _zOpticalInfoESRFromZTK and _zOpticalInfoESRFPrintZTK, respectively. [zeo_render_optic]
+2023. 5.21. Added zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha. [zeo_render_optic]
 2023. 5.21. Removed register keywords. [app]
 2023. 5.21. Corrected positions of __END_DECLS for C++ methods. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_ep, zeo_frame3d]
 2023. 5.20. Renamed labels for exceptions in zPH3DAlloc, zPH3DCreatePrism, zPH3DCreatePyramid, and zPH3DFReadSTL_BinVec. [zeo_ph, zeo_ph_stl]
